testdata/baselines/reference/submodule/conformance/checkSpecialPropertyAssignments.errors.txt
bug24252.js(4,20): error TS8010: Type annotations can only be used in TypeScript files.
bug24252.js(6,20): error TS8010: Type annotations can only be used in TypeScript files.
bug24252.js(8,9): error TS2322: Type 'string[]' is not assignable to type 'number[]'.
  Type 'string' is not assignable to type 'number'.


==== bug24252.js (3 errors) ====
    var A = {};
    A.B = class {
        m() {
            /** @type {string[]} */
                       ~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
            var x = [];
            /** @type {number[]} */
                       ~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
            var y;
            y = x;
            ~
!!! error TS2322: Type 'string[]' is not assignable to type 'number[]'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
        }
    };
    